--- a/project.json
+++ b/project.json
@@ -5,7 +5,11 @@
     "emitEntryPoint": true
   },
   "dependencies": {
-    "Microsoft.AspNetCore.Server.Kestrel": "1.0.0"
+    "Microsoft.AspNetCore.Server.Kestrel": "1.0.0"    
+    ,"Microsoft.AspNetCore.Mvc": "1.0.0"
+    ,"Microsoft.AspNetCore.StaticFiles": "1.0.0"
+    ,"Microsoft.AspNetCore.Identity": "1.0.0"
+
   },
   "frameworks": {
     "netcoreapp1.0": {
