--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}/bin/Debug/netcoreapp1.0/testapp.dll",
+            "program": "${workspaceRoot}/bin/Debug/netcoreapp1.0/krakenserver.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "externalConsole": false,
