--- a/project.json
+++ b/project.json
@@ -9,6 +9,12 @@
     ,"Microsoft.AspNetCore.Mvc": "1.0.0"
     ,"Microsoft.AspNetCore.StaticFiles": "1.0.0"
     ,"Microsoft.AspNetCore.Identity": "1.0.0"   
+    ,"Microsoft.EntityFrameworkCore.Sqlite": "1.0.0"
+    ,"Microsoft.EntityFrameworkCore": "1.0.0"
+    ,"Microsoft.EntityFrameworkCore.Design": {
+      "version": "1.0.0-preview2-final",
+      "type": "build" 
+    }
   },
   "frameworks": {
     "netcoreapp1.0": {
