--- a/project.json
+++ b/project.json
@@ -1,30 +1,54 @@
 {
-  "version": "1.0.0-*",
+  "version": "1.0.1" ,
   "buildOptions": {
     "debugType": "portable",
     "emitEntryPoint": true
+    ,"preserveCompilationContext": true
   },
   "dependencies": {
-    "Microsoft.AspNetCore.Server.Kestrel": "1.0.0"    
-    ,"Microsoft.AspNetCore.Mvc": "1.0.0"
-    ,"Microsoft.AspNetCore.StaticFiles": "1.0.0"
-    ,"Microsoft.AspNetCore.Identity": "1.0.0"   
-    ,"Microsoft.EntityFrameworkCore.Sqlite": "1.0.0"
-    ,"Microsoft.EntityFrameworkCore": "1.0.0"
+    "Microsoft.AspNetCore.Server.Kestrel": "1.0.1"   
+    ,"Microsoft.AspNetCore.Mvc": "1.0.1" 
+    ,"Microsoft.AspNetCore.StaticFiles": "1.0.0" 
+    ,"Microsoft.AspNetCore.Identity": "1.0.0"  
+    ,"Microsoft.AspNetCore.Diagnostics": "1.0.0" 
+    ,"Microsoft.EntityFrameworkCore.Sqlite": "1.0.1" 
+    ,"Microsoft.EntityFrameworkCore": "1.0.1" 
     ,"Microsoft.EntityFrameworkCore.Design": {
-      "version": "1.0.0-preview2-final",
+      "version": "1.0.1",
       "type": "build" 
     }
+    ,"Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0"
+    ,"Microsoft.Extensions.Logging.Console": "1.0.0" 
+    ,"React.AspNet": "3.0.0"
+    ,"React.Core": "3.0.0"
+   ,"Microsoft.AspNetCore.Mvc.Razor": "1.0.1"
+    ,"Microsoft.AspNetCore.Razor.Tools": {
+      "version": "1.0.0-preview2-final",
+      "type": "build"
+    }
+    ,"Microsoft.AspNetCore.Razor": "1.0.0"    
+    },
+  "tools": {
+    "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final"
   },
   "frameworks": {
     "netcoreapp1.0": {
       "dependencies": {
         "Microsoft.NETCore.App": {
           "type": "platform",
-          "version": "1.0.1"
+          "version": "1.0.1" 
         }
       },
-      "imports": "dnxcore50"
+      "imports": [
+        "dotnet5.6",
+        "portable-net45+win8"
+      ]
     }
-  }
+  },
+  "publishOptions": {
+    "include": [
+      "wwwroot",
+      "Views"      
+    ]
+  }  
 }
